# azure-apim-graphql

./: .gitignore  README.md  azure.yaml
.devcontainer/: devcontainer.json  init.sh
fabric-rest-2-graphql/: base.xml  fabric-rest-to-graphql-policy-base.xml  sensors.xml  swagger.json
fabriq-graphql/: README.md  fabric-graphql-policy.xml  fabric_graphql_apim.py  fabric_graphql_auth_application.py  factory_iot_data.csv  factory_schema.graphql  pyproject.toml  quick_test.sh  sample.py
github-graphql-sample/: .env.example  .uvignore  Graph_Legrand.graphql  README.md  demo.sh  get-github-schema.py  github-graphql-policy.xml  github-rest-to-graphql-policy-base.xml  github-rest-to-graphql-policy-repositories.xml  github-schema-minimal.graphql  github_graphql_client.py  legrand_iot_data_curl.sh  legrand_iot_data_examples.md  pyproject.toml  quick_test.sh  requirements.txt  sample.py
github-rest-2-graphql/: github-rest-to-graphql-policy-base.xml  github-rest-to-graphql-policy-repositories.xml  swagger.json
infra/: README.md  main.bicep  main.parameters.json
infra/modules/: api-management.bicep  api.bicep  apim.bicep  appInsights.bicep  graphql-api.bicep  policy.bicep
